add categoryItemRoute
